Tests/CompilerTests/negative/missing-context.hylo
//! no-std

struct A<T> { public memberwise init }

fun g<T, U>(_ x: T) {}

fun main() {
  _ = A()
  g(())
}
